[package]
name = "rust-arbitrage-searcher_v3"
version = "0.1.0"
edition = "2021"
default-run = "rust-arbitrage-searcher_v3"

[dependencies]
ethers = { version = "2.0", features = ["ipc", "ws", "abigen", "rustls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
lettre = { version = "0.10", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
cocoon = "0.4"
rpassword = "7.0"
# 新增：用于高并发查询
futures = "0.3"
uniswap_v3_math = "0.4.1" # 用于本地计算 V3 价格
